Cleanup (warnings; formatting)
GitOrigin-RevId: 01091beae25d7d43960ef25d3b584f64bf20ece3